add math question

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -3,7 +3,8 @@
 // contains shared class styles
 @import 'Main'; //
 // contains specific component level styles
-@import 'Header'; //
+@import 'components/main/Header'; //
+@import 'components/game/Game'; //
 //
 //
 //
