add sentence question

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1,35 +1,4 @@
-$success: #c7f282;
-$warning: #f1e681;
-$error: #f08181;
-$charcoal: #ccc;
-
-.flash-success,
-.flash-warning,
-.flash-error {
-  border: 1px solid $charcoal;
-  display: block;
-  left: 25%;
-  padding: 30px;
-  position: fixed;
-  text-align: center;
-  top: 15%;
-  width: 50%;
-  z-index: 1;
-}
-
-.flash-success {
-  background-color: $success;
-}
-
-.flash-warning {
-  background-color: $warning;
-}
-
-.flash-error {
-  background-color: $error;
-}
-
-.auth-form {
+auth-form {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -45,4 +14,10 @@ $charcoal: #ccc;
     align-self: flex-end;
     max-width: 200px;
   }
+}
+
+body {
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
 }
